# engineering-playbook

./: README.md
devops/argocd-guide-doc/: ArgoCD-Complete-Guide.docx  README.md  index.html  netlify.toml
devops/kubernete-stateless-statful/: README.md  index.html  kubernetes-stateless-vs-stateful-guide.docx
devops/rke2/: README.md  RKE2-Deep-Dive-Guide.docx  index.html
devops/rke2/CarParkSim/: CMakeLists.txt
devops/rke2/CarParkSim/include/: Car.h
software-development/petersons_algorithm/: README.md  index.html  petersons_algorithm.docx
